<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self Reliant Agriculture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Self Reliant Agriculture - Dashboard</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="Logo">Logo Home Button</string>
    <string name="feedtext">Feed The World</string>
    <string name="login">Login</string>
    <string name="landingtText">SELF RELIANCE + SUSTAINABLE FARMING + LASTING IMPACT</string>
    <string name="title_activity_login">Login</string>
    <string name="passwordText">Password</string>
    <string name="usernameText">Username</string>
    <string name="title_activity_dash_board">Dashboard</string>
    <string name="title_activity_interview">Interview</string>
    <string name="sync">Sync</string>
    <string name="plus">+</string>
    <string name="house">Add Household</string>
    <string name="House">Add Household</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="appPrefs">Application Preferences</string>

    <!-- Interview strings -->
    <string name="nutrition_tab_title">Nutrition</string>
    <string name="agronomy_tab_title">Agronomy</string>
    <string name="sas_tab_title">Small Animal Science</string>
    <string name="nutrition_tab_header">Consumed Foods</string>
    <string name="add_food_item_button">New food item</string>
    <string name="remove_food_item_button">Delete</string>
    <string name="food_item">Food Item</string>
    <string name="serving_size">Serving Size</string>
    <string name="servings">Number of Servings</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="entered_food_hint">food item</string>
    <string name="serving_size_hint">serving size</string>

    <string-array name="serving_units">
        <item>oz.</item>
        <item>ltr.</item>
        <item>lbs.</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addInterview">Add Interview</string>
    <string name="title_activity_edit_question_set">EditQuestionSet</string>
    <string name="title_activity_edit_question">EditQuestion</string>

    <!-- strings for Creating Question Sets and Questions -->
    <string-array name="data_point_types_array">
        <item>Text</item>
        <item>Number</item>
        <item>Date</item>
        <item>Option List</item>
    </string-array>
    <string-array name="question_set_categories_array">
        <item>Area</item>
        <item>Household</item>
        <item>Individual</item>
    </string-array>

    <string name="title_activity_question_set_list">QuestionSetList</string>
    <string name="title_activity_data_gather">DataGather</string>

</resources>
