<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context=".MyActivity"
    android:weightSum="1">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/logo"
        android:background="#F2F3F4"
        android:contentDescription="@string/Logo"
        android:gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:padding="5dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginLeft="0dp"
            android:text="@string/feedtext"
            android:id="@+id/FeedButton"
            android:background="#F2F3F4"
            android:layout_weight="0.87" />
    <Button
        android:layout_width="320dp"
        android:layout_height="63dp"
        android:layout_marginLeft="0dp"
        android:text="@string/login"
        android:id="@+id/LoginButton"
        android:background="#F2F3F4"
        android:layout_weight="0.12" />

</LinearLayout>
